.gitlab-ci.yml added README.md updated, refactoring